--- a/.gitignore
+++ b/.gitignore
@@ -3,25 +3,31 @@ project/project
 project/target
 target
 tmp
+
 .history
 dist
-/.idea
-/*.iml
+/
+.idea
+/
+*.iml
 /out
-/.idea_modules
-/.classpath
-/.project
+/
+.idea_modules
+/
+.classpath
+/
+.project
 /RUNNING_PID
-/.settings
+/
+.settings
+
 ui/libpeerconnection.log
 
 
-.target
-bin
-.cache
+.target/
+bin/
+.cache 
 
-# Compiled source #
-###################
 *.com
 *.class
 *.dll
@@ -29,11 +35,7 @@ bin
 *.o
 *.so
 *.cache
-
-# Packages #
-############
-# it's better to unpack these files and commit the raw source
-# git has its own built in compression methods
+ 
 *.7z
 *.dmg
 *.gz
@@ -41,20 +43,27 @@ bin
 *.jar
 *.rar
 *.tar
-*.zip
+*.zip 
 
-# Logs and databases #
-######################
 *.log
 *.sql
 *.sqlite
-
-# OS generated files #
-######################
+ 
 .DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
 ehthumbs.db
+Thumbs.db
+
+#History
+.history
+
+# Mac OS X
+._*
+.DS_Store
+
+# Windows
+Desktop.ini
 Thumbs.db
