--- a/.gitignore
+++ b/.gitignore
@@ -1,64 +1,54 @@
-logs
-project/project
+# .gitignore
+
+# Local configuration
+local.conf
+
+# Play
+dist/
+RUNNING_PID
+
+# sbt
+project/project/
 project/target
-target
-tmp
+target/
 
-.history
-dist
-/
-.idea
-/
-*.iml
-/out
-/
-.idea_modules
-/
-.classpath
-/
-.project
-/RUNNING_PID
-/
-.settings
-
-ui/libpeerconnection.log
-
-
-.target/
-bin/
-.cache 
-
-*.com
-*.class
-*.dll
-*.exe
-*.o
-*.so
-*.cache
- 
-*.7z
-*.dmg
-*.gz
-*.iso
-*.jar
-*.rar
-*.tar
-*.zip 
-
+# Logs
 *.log
-*.sql
-*.sqlite
- 
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
+logs/
+
+db/
+
+export.json
+
+# Temporary files
+*~
+*.bak
+*.old
+*.tmp
+nohup.out
+tmp/
 
 #History
 .history
+
+
+# vim
+.*.sw[a-z]
+
+# Eclipse
+.cache
+.classpath
+.project
+.settings/
+.target/
+bin/
+
+# Idea
+/.idea
+/*.iml
+/out
+/.idea_modules
+
 
 # Mac OS X
 ._*
@@ -67,3 +57,4 @@ Thumbs.db
 # Windows
 Desktop.ini
 Thumbs.db
+
